// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form  snapshot 1`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 bFLhoX"
  >
    <form
      class="sc-bdvvaa nNUGj"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 iYasFZ"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 jUPATD"
        >
          <div>
            <div
              class="StyledBox-sc-13pk1d4-0 eyhXU FormField__FormFieldBox-m9hood-0 gWgpjB"
            >
              <label
                class="StyledText-sc-1sadyjn-0 japRIL"
                for="password"
              >
                Password
              </label>
              <div
                class="StyledBox-sc-13pk1d4-0 ijhmMK FormField__FormFieldContentBox-m9hood-1"
              >
                <div
                  class="sc-eCImvq jmqpJQ"
                >
                  <div
                    class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 cnyLED"
                  >
                    <input
                      autocomplete="off"
                      class="StyledTextInput-sc-1x30a0s-0 evYMFd sc-hKwCoD gZqskY"
                      id="password"
                      name="password"
                      type="password"
                      value=""
                    />
                  </div>
                  <div
                    class="StyledBox-sc-13pk1d4-0 kuSryJ sc-jRQAMF bfJPfh"
                  >
                    <button
                      class="StyledButton-sc-323bzc-0 knherS"
                      tabindex="-1"
                      type="button"
                    >
                      <svg
                        aria-label="FormView"
                        class="StyledIcon-ofa7kd-0 exrjxz"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12,17 C9.27272727,17 6,14.2222222 6,12 C6,9.77777778 9.27272727,7 12,7 C14.7272727,7 18,9.77777778 18,12 C18,14.2222222 14.7272727,17 12,17 Z M11,12 C11,12.55225 11.44775,13 12,13 C12.55225,13 13,12.55225 13,12 C13,11.44775 12.55225,11 12,11 C11.44775,11 11,11.44775 11,12 Z"
                          fill="none"
                          stroke="#000"
                          stroke-width="2"
                        />
                      </svg>
                    </button>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 eyhXU FormField__FormFieldBox-m9hood-0 gWgpjB"
            >
              <label
                class="StyledText-sc-1sadyjn-0 japRIL"
                for="password1"
              >
                Confirm Password
              </label>
              <div
                class="StyledBox-sc-13pk1d4-0 ijhmMK FormField__FormFieldContentBox-m9hood-1"
              >
                <div
                  class="sc-eCImvq jmqpJQ"
                >
                  <div
                    class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 cnyLED"
                  >
                    <input
                      autocomplete="off"
                      class="StyledTextInput-sc-1x30a0s-0 evYMFd sc-hKwCoD gZqskY"
                      id="password1"
                      name="password1"
                      type="password"
                      value=""
                    />
                  </div>
                  <div
                    class="StyledBox-sc-13pk1d4-0 kuSryJ sc-jRQAMF bfJPfh"
                  >
                    <button
                      class="StyledButton-sc-323bzc-0 knherS"
                      tabindex="-1"
                      type="button"
                    >
                      <svg
                        aria-label="FormView"
                        class="StyledIcon-ofa7kd-0 exrjxz"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12,17 C9.27272727,17 6,14.2222222 6,12 C6,9.77777778 9.27272727,7 12,7 C14.7272727,7 18,9.77777778 18,12 C18,14.2222222 14.7272727,17 12,17 Z M11,12 C11,12.55225 11.44775,13 12,13 C12.55225,13 13,12.55225 13,12 C13,11.44775 12.55225,11 12,11 C11.44775,11 11,11.44775 11,12 Z"
                          fill="none"
                          stroke="#000"
                          stroke-width="2"
                        />
                      </svg>
                    </button>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 eyhXU FormField__FormFieldBox-m9hood-0 gWgpjB"
            >
              <label
                class="StyledText-sc-1sadyjn-0 japRIL"
                for="url"
              >
                URL
              </label>
              <div
                class="StyledBox-sc-13pk1d4-0 ijhmMK FormField__FormFieldContentBox-m9hood-1"
              >
                <div
                  class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 cnyLED"
                >
                  <input
                    autocomplete="off"
                    class="StyledTextInput-sc-1x30a0s-0 bcUlnk"
                    id="url"
                    name="url"
                    value=""
                  />
                </div>
              </div>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 eyhXU FormField__FormFieldBox-m9hood-0 gWgpjB"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 ijhmMK FormField__FormFieldContentBox-m9hood-1"
              >
                <button
                  aria-label="Open Drop"
                  class="StyledButton-sc-323bzc-0 ffRhrh Select__StyledSelectDropButton-sc-17idtfo-1 iaczYL"
                  id="gender"
                  type="button"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 hoBZOR"
                  >
                    <div
                      class="StyledBox-sc-13pk1d4-0 dtQiSn"
                    >
                      <div
                        class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 cnyLED"
                      >
                        <input
                          autocomplete="off"
                          class="StyledTextInput-sc-1x30a0s-0 bcUlnk Select__SelectTextInput-sc-17idtfo-0 kMNVoA"
                          id="gender__input"
                          name="gender"
                          readonly=""
                          tabindex="-1"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                    <div
                      class="StyledBox-sc-13pk1d4-0 jzyREm"
                      style="min-width: auto;"
                    >
                      <svg
                        aria-label="FormDown"
                        class="StyledIcon-ofa7kd-0 gMeCrH"
                        viewBox="0 0 24 24"
                      >
                        <polyline
                          fill="none"
                          points="18 9 12 15 6 9"
                          stroke="#000"
                          stroke-width="2"
                        />
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 eyhXU FormField__FormFieldBox-m9hood-0 gWgpjB"
            >
              <label
                class="StyledText-sc-1sadyjn-0 japRIL"
                for="tos"
              >
                Terms of service
              </label>
              <div
                class="StyledBox-sc-13pk1d4-0 ijhmMK FormField__FormFieldContentBox-m9hood-1"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 ktlgjz"
                >
                  <label
                    class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 cQEWce"
                    for="tos"
                  >
                    <div
                      class="StyledBox-sc-13pk1d4-0 jKFhht StyledCheckBox-sc-1dbk5ju-6 fJLUFg"
                    >
                      <input
                        class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 gXyGmK"
                        id="tos"
                        name="tos"
                        type="checkbox"
                      />
                      <div
                        class="StyledBox-sc-13pk1d4-0 iCZFPP StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 eNpbdq"
                      />
                    </div>
                  </label>
                </div>
              </div>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 eyhXU FormField__FormFieldBox-m9hood-0 gWgpjB"
            >
              <label
                class="StyledText-sc-1sadyjn-0 japRIL"
                for="age"
              >
                Age
              </label>
              <div
                class="StyledBox-sc-13pk1d4-0 ijhmMK FormField__FormFieldContentBox-m9hood-1"
              >
                <div
                  class="sc-eCImvq jmqpJQ"
                >
                  <div
                    class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 cnyLED"
                  >
                    <input
                      autocomplete="off"
                      class="StyledTextInput-sc-1x30a0s-0 evYMFd sc-hKwCoD cRuqbS"
                      id="age"
                      inputmode="numeric"
                      name="age"
                      pattern="[0-9]*"
                      type="text"
                      value=""
                    />
                  </div>
                  <div
                    class="StyledBox-sc-13pk1d4-0 kuSryJ sc-jRQAMF bfJPfh"
                  >
                    <button
                      class="StyledButton-sc-323bzc-0 knherS"
                      tabindex="-1"
                      type="button"
                    >
                      <svg
                        aria-label="Add"
                        class="StyledIcon-ofa7kd-0 exrjxz"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12,22 L12,2 M2,12 L22,12"
                          fill="none"
                          stroke="#000"
                          stroke-width="2"
                        />
                      </svg>
                    </button>
                    <button
                      class="StyledButton-sc-323bzc-0 knherS"
                      tabindex="-1"
                      type="button"
                    >
                      <svg
                        aria-label="Subtract"
                        class="StyledIcon-ofa7kd-0 exrjxz"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M2,12 L22,12"
                          fill="none"
                          stroke="#000"
                          stroke-width="2"
                        />
                      </svg>
                    </button>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 kspWmI"
            >
              <button
                class="StyledButton-sc-323bzc-0 cfaKOi"
                type="submit"
              >
                Submit
              </button>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`Form  snapshot 2`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 bFLhoX"
  >
    <form
      class="sc-bdvvaa nNUGj"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 iYasFZ"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 hzkwpE"
        >
          <div>
            <div
              class="StyledBox-sc-13pk1d4-0 eyhXU FormField__FormFieldBox-m9hood-0 gWgpjB"
            >
              <label
                class="StyledText-sc-1sadyjn-0 japRIL"
                for="fieldname"
              >
                Text
              </label>
              <div
                class="StyledBox-sc-13pk1d4-0 ijhmMK FormField__FormFieldContentBox-m9hood-1"
              >
                <div
                  class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 cnyLED"
                >
                  <input
                    autocomplete="off"
                    class="StyledTextInput-sc-1x30a0s-0 bcUlnk"
                    id="fieldname"
                    name="fieldname"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`Form  snapshot 3`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 bFLhoX"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 kspWmI"
    >
      <form
        class="sc-bdvvaa nNUGj"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 iYasFZ"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 hzkwpE"
          >
            <div>
              <div
                class="StyledBox-sc-13pk1d4-0 eyhXU FormField__FormFieldBox-m9hood-0 gWgpjB"
              >
                <label
                  class="StyledText-sc-1sadyjn-0 japRIL"
                  for="mytextinput"
                >
                  Text
                </label>
                <div
                  class="StyledBox-sc-13pk1d4-0 ijhmMK FormField__FormFieldContentBox-m9hood-1"
                >
                  <div
                    class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 cnyLED"
                  >
                    <input
                      autocomplete="off"
                      class="StyledTextInput-sc-1x30a0s-0 bcUlnk"
                      id="mytextinput"
                      name="mytextinput"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </form>
      <span
        class="StyledText-sc-1sadyjn-0 ioNTgI"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Form  snapshot 4`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 bFLhoX"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 kspWmI"
    >
      <form
        class="sc-bdvvaa nNUGj"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 iYasFZ"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 hzkwpE"
          >
            <div>
              <div
                class="StyledBox-sc-13pk1d4-0 eyhXU FormField__FormFieldBox-m9hood-0 gWgpjB"
              >
                <label
                  class="StyledText-sc-1sadyjn-0 japRIL"
                  for="errofield"
                >
                  Text
                </label>
                <div
                  class="StyledBox-sc-13pk1d4-0 ijhmMK FormField__FormFieldContentBox-m9hood-1"
                >
                  <div
                    class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 cnyLED"
                  >
                    <input
                      autocomplete="off"
                      class="StyledTextInput-sc-1x30a0s-0 bcUlnk"
                      id="errofield"
                      name="errofield"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </form>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Form  snapshot 5`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 bFLhoX"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 kspWmI"
    >
      <form
        class="sc-bdvvaa nNUGj"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 iYasFZ"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 hzkwpE"
          >
            <div>
              <div
                class="StyledBox-sc-13pk1d4-0 eyhXU FormField__FormFieldBox-m9hood-0 gWgpjB"
              >
                <label
                  class="StyledText-sc-1sadyjn-0 japRIL"
                  for="invalidfield"
                >
                  Text
                </label>
                <div
                  class="StyledBox-sc-13pk1d4-0 ijhmMK FormField__FormFieldContentBox-m9hood-1"
                >
                  <div
                    class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 cnyLED"
                  >
                    <input
                      autocomplete="off"
                      class="StyledTextInput-sc-1x30a0s-0 bcUlnk"
                      id="invalidfield"
                      name="invalidfield"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </form>
      <span
        class="StyledText-sc-1sadyjn-0 ioNTgI"
      >
        valid
      </span>
    </div>
  </div>
</DocumentFragment>
`;
